--- a/StudioSync/Pages/Index.razor
+++ b/StudioSync/Pages/Index.razor
@@ -1,6 +1,10 @@
 ﻿@page "/"
-@page "/{coden}"
+@page "/{SynchroCode}"
 @using Microsoft.AspNetCore.SignalR.Client;
+@using System.Net.Http;
+@using StudioSync.Core;
+@using System.Net.Http.Json
+@inject HttpClient Http
 @inject NavigationManager MyNavigationManager
 @inject IJSRuntime JSRuntime;
 
@@ -16,28 +20,51 @@
     string MainTime = "00:00";
     string NewSyncCode = "";
     string FriendryName = "スタジオ";
+    const string SystemMessageAuthor = "WSOFTSTUDIOSYNCADMIN";
     string ConnectionAddress = "https://api.wsoft.ws/studio-sync/connect";
+    string ClientID = Guid.NewGuid().ToString("N");
     Progress UsingProgress = null;
     DateTime TimeLimit = DateTime.MinValue;
     TimeSpan CountUp = TimeSpan.Zero;
     TimeSpan TimeMax = TimeSpan.Zero;
     int cd = -1;
+    bool Editing = false;
     bool timering = false;
     bool finish = false;
     string Script="3:00";
+    int syncCount = 0;
+    int syncSecs = 2;
+    bool Initailzed = false;
     bool IsConnected => hubConnection?.State == HubConnectionState.Connected;
-    string SynchroCode = "";
     HubConnection hubConnection;
 
     [Parameter]
-    public string coden{ get; set; }
+    public string SynchroCode { get; set; }
 
     protected override async Task OnInitializedAsync()
     {
+        try
+        {
+            var resp = await Http.GetAsync("https://api.wsoft.ws/studio-sync/version");
+            var r = await resp.Content.ReadFromJsonAsync<AcceptRequirements>();
+            if (r.MinClientVersion > version.Version)
+            {
+                Initailzed = true;
+                await ShowModal("forbiddenModal");
+                return;
+            }
+
+        }
+        catch
+        {
+            Initailzed = true;
+            await ShowModal("forbiddenModal");
+            return;
+        }
         Timer.Elapsed +=  async (object? sender, System.Timers.ElapsedEventArgs e)=>
         {
             DateTime time = DateTime.Now;
-            NowTime = time.ToString("hh:mm:ss");
+            NowTime = time.ToString("HH:mm:ss");
             if (finish)
             {
                 MainTime = "00:00";
@@ -73,10 +100,24 @@
                 cd = 3;
                 MainTime = "00:0"+cd;
             }
+            if (syncCount == syncSecs)
+            {
+                syncCount = 0;
+                if (Editing)
+                {
+                    if (Script == null)
+                    {
+                        Script = "";
+                    }
+                    StateHasChanged();
+                }
+            }
+            else
+            {
+                syncCount++;
+            }
             StateHasChanged();
         };
-        Timer.Start();
-
         var hub2 = new HubConnectionBuilder();
         hubConnection = hub2.WithUrl(ConnectionAddress).WithAutomaticReconnect().Build();
         hubConnection.On<string,string>("ReciveMessage", (string name, string message) =>
@@ -85,12 +126,25 @@
         ct_e.Name = name;
         ct_e.Content = message;
         ct_e.Recived = DateTime.Now;
-        chats.Add(ct_e);
+        ct_e.IsSystemMessage = false;
+        if (name == SystemMessageAuthor)
+        {
+            ct_e.Name = "システム";
+            ct_e.IsSystemMessage = true;
+        }
+
+        var m_chats = new List<ChatEntry>() { ct_e};
+        m_chats.AddRange(chats);
+        chats = m_chats;
 
     });
         hubConnection.On<string>("Sync", (string script) =>
         {
-            Script = script;
+            if (!Editing)
+            {
+                Script = script;
+                hubConnection.InvokeAsync("SaveSync", Script, SynchroCode);
+            }
 
         });
         hubConnection.On<string>("TimerStart", (string script) =>
@@ -116,38 +170,43 @@
             finish = true;
         });
         await hubConnection.StartAsync();
-        if (string.IsNullOrEmpty(coden))
-        {
-            Random random = new Random();
-            SynchroCode = (random.Next(100000, 999999)).ToString();
-        }
-        else
-        {
-            SynchroCode = coden;
-            await hubConnection.InvokeAsync("Send","システム",FriendryName+"が参加しました", SynchroCode);
-        }
-        await hubConnection.InvokeAsync("Join",SynchroCode);
+
+        Timer.Start();
+
+        Initailzed = true;
 
     }
-    async void OnNewSync()
+    protected override async Task OnAfterRenderAsync(bool firstRender)
     {
-        if (string.IsNullOrEmpty(NewSyncCode))
+        if (firstRender)
         {
+            await ShowModal("welcomeModal");
+        }
+    }
+    async Task ShowModal(string id)
+    {
+        await JSRuntime.InvokeVoidAsync("showModal",id);
+    }
+    async void OnWelcome()
+    {
 
-        }
-        else
-        {
-            await hubConnection.InvokeAsync("Bye", SynchroCode);
-            chats.Clear();
-            var ce = new ChatEntry();
-            ce.Name = "システム";
-            ce.Content = "参加先を変更しました";
-            ce.Recived = DateTime.Now;
-            chats.Add(ce);
-            SynchroCode = NewSyncCode;
-            await hubConnection.InvokeAsync("Send", "システム", FriendryName + "が参加しました", SynchroCode);
-        }
-        await hubConnection.InvokeAsync("Join", SynchroCode);
+        MyNavigationManager.NavigateTo($"/" + NewSyncCode, false);
+        await hubConnection.InvokeAsync("Join", ClientID, SynchroCode);
+        await hubConnection.InvokeAsync("Send", SystemMessageAuthor, FriendryName + "が参加しました", SynchroCode);
+    }
+    async void OnRandomWelcome()
+    {
+        Random random = new Random();
+        SynchroCode = (random.Next(100000, 999999)).ToString();
+        MyNavigationManager.NavigateTo($"/" + SynchroCode, false);
+        await hubConnection.InvokeAsync("Join", ClientID, SynchroCode);
+        await hubConnection.InvokeAsync("Send", SystemMessageAuthor, FriendryName + "が参加しました", SynchroCode);
+    }
+    async void OnJoinWelcome()
+    {
+        await hubConnection.InvokeAsync("Join", ClientID, SynchroCode);
+
+        await hubConnection.InvokeAsync("Send", SystemMessageAuthor, FriendryName + "が参加しました", SynchroCode);
     }
     async void OnChatSend()
     {
@@ -184,6 +243,32 @@
         await hubConnection.InvokeAsync("TimerPauseAd",SynchroCode);
     }
 }
+
+@if (!Initailzed)
+{
+    <div class="modal-open">
+            <div class="modal fade show" tabindex="-1" role="dialog" aria-modal="true" style="display: block;">
+                <div class="modal-dialog modal-dialog-centered">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <p class="modal-title" id="exampleModalLabel">起動しています</p>
+                        </div>
+                        <div class="modal-body text-center">
+                            <h1>StudioSync</h1>
+                            <div class="spinner-border" role="status">
+                                <span class="visually-hidden">Loading...</span>
+                            </div>
+                            <p>サーバーとシンクロ中</p>
+                        </div>
+                        <div class="modal-footer">
+                            Copylight 2023 WSOFT All rights reserved.
+                        </div>
+                    </div>
+                </div>
+            </div>
+    </div>
+}
+
 <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">StudioSync</a>
@@ -211,8 +296,25 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-4">
-            <h3>台本ビュー &nbsp; <button type="button" onclick="@OnSaveSync" class="btn btn-primary">保存</button></h3>
-            <textarea class="form-control" style="height: 100%;" @bind="Script" aria-label="With textarea" placeholder="//台本をここに入力します"></textarea>
+            <div class="container">
+                <div class="row">
+                    <div class="col-6">
+                        <h3>台本ビュー</h3>
+                    </div>
+                    <div class="col-4">
+                        <div class="form-check fs-4">
+                            <input class="form-check-input" type="checkbox" @bind="Editing" id="flexCheckDefault">
+                            <label class="form-check-label" for="flexCheckDefault">
+                                編集モード
+                            </label>
+                        </div>
+                    </div>
+                    <div class="col-2">
+                        <button type="button" @onclick="OnSaveSync" class="btn btn-primary">保存</button>
+                    </div>
+                </div>
+            </div>
+            <textarea class="form-control" style="height: 100%;" readonly="@(!Editing)" @bind="Script" aria-label="With textarea" placeholder="//台本をここに入力します"></textarea>
         </div>
         <div class="col-4">
             <h3>タイマービュー</h3>
@@ -248,24 +350,26 @@
                 </div>
                 <hr/>
                 <h3>シンクロ</h3>
-                <p>この@(FriendryName)と接続するには、シンクロコード<b>@SynchroCode</b>を使用するか、下記のQRコードをスキャンします。</p>
+                <p>この@(FriendryName)と接続するには、シンクロコードを使用するか、下記のQRコードをスキャンします。</p>
                 <p class="text-center">
-                    <img src="@("https://api.qrserver.com/v1/create-qr-code/?data="+ System.Web.HttpUtility.UrlEncode(MyNavigationManager.BaseUri)+SynchroCode+"&size=200x200")" alt="QRコード" />
+                    <h4>@SynchroCode</h4>
+                    <a href="@(MyNavigationManager.BaseUri+SynchroCode)"><img src="@("https://api.qrserver.com/v1/create-qr-code/?data="+ System.Web.HttpUtility.UrlEncode(MyNavigationManager.BaseUri)+SynchroCode+"&size=200x200")" alt="@(MyNavigationManager.BaseUri+SynchroCode)" /></a>
+                    
                 </p>
                 <p>もしくは、シンクロコードを使って他のセッションに参加することもできます</p>
                 <div class="input-group mb-3">
                     <input type="text" class="form-control" @bind="NewSyncCode" placeholder="シンクロコード" aria-label="シンクロコード" aria-describedby="button-addon22">
-                    <button class="btn btn-outline-primary" @onclick="OnNewSync" type="button" id="button-addon22">シンクロ</button>
+                    <button class="btn btn-outline-primary" @onclick="OnWelcome" type="button" id="button-addon22">シンクロ</button>
                 </div>
             </div>
         </div>
         <div class="col-4">
             <h3>チャットビュー</h3>
-            <div class="overflow-scroll" style="height :80vh" id="chat">
+            <div class="overflow-scroll toast-container" style="height :80vh" id="chat">
                 
-                @foreach(var chat in chats)
+                @foreach (var chat in chats)
                 {
-                    <DynamicComponent Type="typeof(ChatEntry)" Parameters="@(new Dictionary<string,object>{["Name"]=chat.Name,["Content"]=chat.Content,["Recived"]=chat.Recived})"/>
+                    <DynamicComponent Type="typeof(ChatEntry)" Parameters="@(new Dictionary<string,object>{["Name"]=chat.Name,["Content"]=chat.Content,["Recived"]=chat.Recived,["IsSystemMessage"]=chat.IsSystemMessage})"/>
                 }
 
             </div>
@@ -306,6 +410,63 @@
                         <button class="btn btn-outline-primary" @onclick="OnConnectionChange" type="button" id="button-addon23">接続</button>
                     </div>
                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="welcomeModal" tabindex="-1" data-bs-backdrop="static" aria-labelledby="welcomeModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="welcomeModalLabel">StudioSyncへようこそ</h5>
+            </div>
+            <div class="modal-body">
+                <p>初めに、この端末の名前を入力してください。</p>
+                <input class="form-control me-2" @bind="FriendryName" type="text" placeholder="このデバイスの名前" aria-label="このデバイスの名前"/>
+                <hr/>
+                @if (string.IsNullOrEmpty(SynchroCode))
+                {
+                    <p>まだセッションが始まっていない場合、あなたがシンクロコードを作って開始することができます。</p>
+                    <div class="text-center">
+                        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#welcomeModal" @onclick="OnRandomWelcome">シンクロコードを作って開始</button>
+                    </div>
+                }
+                else
+                {
+                    <p>次のセッションに招待されました。</p>
+                    <div class="text-center">
+                        <h2>@SynchroCode</h2>
+                        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#welcomeModal" @onclick="OnJoinWelcome">このセッションに参加</button>
+                    </div>
+                }
+
+                <hr/>
+                <p>シンクロコードを使用して、すでに開始している別のセッションに参加することもできます。</p>
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control" @bind="NewSyncCode" placeholder="シンクロコード" aria-label="シンクロコード" aria-describedby="button-addon24">
+                    <button class="btn btn-outline-primary" @onclick="OnWelcome" type="button" data-bs-toggle="modal" data-bs-target="#welcomeModal" id="button-addon24">シンクロ</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="forbiddenModal" tabindex="-2" data-bs-backdrop="static" aria-labelledby="forbiddenModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="forbiddenModalLabel">StudioSyncを使用できません</h5>
+            </div>
+            <div class="modal-body">
+                <p>現在、この端末ではStudioSyncを使用できません。これは次のいずれかが原因である可能性があります。</p>
+                <ul>
+                    <li>インターネットに接続していない</li>
+                    <li>端末またはこのアプリのバージョンが古い</li>
+                    <li>サーバーとの接続が拒否された</li>
+                </ul>
+                <hr/>
+                <p>このアプリは、<b>@version.FullName</b>です。</p>
             </div>
         </div>
     </div>
