--- a/StudioSync/Pages/Index.razor
+++ b/StudioSync/Pages/Index.razor
@@ -174,6 +174,7 @@
                 //フラグが立っていたらLifeCheckを送り返す
                 await hubConnection.InvokeAsync("LifeCheck",SynchroCode);
             }
+            StateHasChanged();
         });
         await hubConnection.StartAsync();
 
