名称からびゅーを削除

--- a/StudioSync/Pages/Index.razor
+++ b/StudioSync/Pages/Index.razor
@@ -334,7 +334,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-6">
-                        <h4>シナリオビュー</h4>
+                        <h4>シナリオ</h4>
                     </div>
                     <div class="col-4">
                         <div class="form-check fs-4">
@@ -352,7 +352,7 @@
             <textarea class="form-control" style="height: 100%;" readonly="@(!Editing)" @bind="Script" aria-label="With textarea" placeholder="//台本をここに入力します"></textarea>
         </div>
         <div class="col-4">
-            <h4>タイマービュー</h4>
+            <h4>タイマー</h4>
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-6">
@@ -399,7 +399,7 @@
             </div>
         </div>
         <div class="col-4">
-            <h4>チャットビュー</h4>
+            <h4>チャット</h4>
             <div class="toast-container" id="chat">
                 @if (chats.Count > 0)
                 {
