--- a/StudioSync/Shared/ChatEntry.razor
+++ b/StudioSync/Shared/ChatEntry.razor
@@ -1,4 +1,4 @@
-﻿
+﻿@using System.Text.Encodings.Web
 
 @code {
 
@@ -14,6 +14,29 @@
     public bool IsSystemMessage{ get; set; }
     [Parameter]
     public string Key{ get; set; }
+
+    string GetText()
+    {
+        string raw = Content;
+        raw = HtmlEncoder.Default.Encode(raw);
+        raw = ConvertUrlToImage(raw);
+        raw = ConvertUrlToLink(raw);
+        return raw;
+    }
+    string ConvertUrlToImage(string input)
+    {
+        return System.Text.RegularExpressions.Regex.Replace(
+           input,
+           @"img-(\s?s?https?://[-_.!~*'()a-zA-Z0-9;/?:@&=+$,%#]+$)", "<div class=\"text-center\"><img src=\"$1\"  class=\"img-fluid img-thumbnail\" style=\"max-width: 100%; height: auto;\" alt=\"$1\" /></div>"
+        );
+    }
+    string ConvertUrlToLink(string input)
+    {
+        return System.Text.RegularExpressions.Regex.Replace(
+           input,
+           @"(\s?s?https?://[-_.!~*'()a-zA-Z0-9;/?:@&=+$,%#]+$)", "<a href=\"$1\" target=\"_blank\">$1</a>"
+        );
+    }
         }
 
     <div class="toast show" data-bs-animation="true" role="alert" aria-live="assertive" aria-atomic="true">
@@ -28,9 +51,9 @@
             }
             &nbsp;
             <strong class="me-auto">@Name</strong>
-            <small class="text-muted">@Recived.ToString("yyyy/MM/dd hh:mm")</small>
+            <small class="text-muted">@Recived.ToString("yyyy/MM/dd HH:mm")</small>
         </div>
         <div class="toast-body">
-            @Content
+        @((MarkupString)GetText())
         </div>
     </div>
